--- a/css/2.css
+++ b/css/2.css
@@ -12,7 +12,12 @@ body
 {
     background-color: white;
     margin: 0;
+    overflow-y: scroll;
     overflow-x: hidden;
+}
+::-webkit-scrollbar 
+{
+    width: 0px;
 }
 a
 {
@@ -32,20 +37,32 @@ a
     flex-shrink: 1;
     flex-basis: auto;
 }
-#preto
+.black_
 {
     position: absolute;
     z-index: 4;
-    width: 100%;
-    height: 100%;
     margin: 0;
     display: none;
     justify-content: center;
     align-items: center;
+    width: 100vw;
+    height: 100vh;
+    min-height: 100vh;
+    max-height: 100vh;
     flex-direction: column;
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: auto;
+    animation: wha 0.3s forwards;
+}
+@keyframes wha
+{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .something
 {
@@ -58,14 +75,17 @@ a
 @keyframes buu
 {
     0%{
-      opacity: 0;
+        opacity: 0;
     }
-    50%{
-      opacity: 0.3;
+    20%{
+        opacity: 0;
+    }
+    60%{
+        opacity: 0.3;
     }
     100%{
-      display: none;
-      opacity: 0;
+        display: none;
+        opacity: 0;
     }
 }
 .logo
@@ -109,17 +129,17 @@ a
     flex-grow: 0;
     flex-shrink: 0;
     margin-top: 0;
-    margin-left: -16px;
+    margin-left: -15px;
 }
 .mao
 {
-    width: 32px;
+    width: 30px;
     position: relative;
     float: left;
     z-index: 2;
     margin: 0;
     margin-top: -8px;
-    animation: backForth 1s infinite;
+    animation: backForth 0.8s linear infinite;
 }
 @keyframes backForth 
 {
@@ -127,7 +147,7 @@ a
       transform: translateX(0);
     }
     50% {
-        transform: translateX(-4px);
+        transform: translateX(-3px);
     }
     100% {
       transform: translateX(0px);
@@ -137,18 +157,19 @@ a
 {
     position: relative;
     float: left;
-    margin-right: 25px;
+    margin-right: 20px;
     color: rgb(255, 255, 255);
     font-family: 'font1';
-    font-size: 20px;
+    font-size: 1.2rem;
     text-align: center;
     align-content: center;
     background-color: #06000f;
-    padding: 7px;
+    padding: 5px;
     border: 1px solid #06000f;
-    width: 80px;
+    width: 70px;
     cursor: url(img/cursor.png), auto;
     animation: upToDown 1s forwards;
+    transition: 1s;
 }
 @keyframes upToDown 
 {
@@ -174,16 +195,16 @@ a
 {
     position: relative;
     float: left;
-    margin-right: 25px;
+    margin-right: 20px;
     color: rgb(255, 255, 255);
     font-family: 'font1';
-    font-size: 20px;
+    font-size: 1.2rem;
     text-align: center;
     align-content: center;
     background-color: #06000f;
-    padding: 7px;
+    padding: 5px;
     border: 1px solid #06000f;
-    width: 80px;
+    width: 70px;
     cursor: url(img/cursor.png), auto;
 }
 .gemaplys:before 
@@ -201,16 +222,16 @@ a
 {
     position: relative;
     float: left;
-    margin-right: 25px;
+    margin-right: 20px;
     color: rgb(255, 255, 255);
     font-family: 'font1';
-    font-size: 20px;
+    font-size: 1.2rem;
     text-align: center;
     align-content: center;
     background-color: #06000f;
-    padding: 7px;
+    padding: 5px;
     border: 1px solid #06000f;
-    width: 80px;
+    width: 70px;
     cursor: url(img/cursor.png), auto;
 }
 .story:before 
@@ -230,13 +251,13 @@ a
     float: left;
     color: rgb(255, 255, 255);
     font-family: 'font1';
-    font-size: 20px;
+    font-size: 1.2rem;
     text-align: center;
     align-content: center;
     background-color: #06000f;
-    padding: 7px;
+    padding: 5px;
     border: 1px solid #06000f;
-    width: 80px;
+    width: 70px;
     cursor: url(img/cursor.png), auto;
 }
 .team:before 
@@ -267,6 +288,16 @@ a
     flex-basis: auto;
     flex-direction: column;
     position: relative;
+    animation: uwu 1s forwards;
+}
+@keyframes uwu
+{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .bct:after 
 {
@@ -300,7 +331,6 @@ a
 {
     width: 0px;
     height: 0px;
-    z-index: 4;
 }
 .ct1::-webkit-scrollbar-track
 {
@@ -460,6 +490,13 @@ a
 }
 @media screen and (max-width: 64rem)
 {
+    @media screen and (max-height: 44rem)
+    {
+        .bct
+        {
+            max-height: 250px;
+        }
+    }
     .k7
     {
         width: 30rem !important;
