--- a/css/3.css
+++ b/css/3.css
@@ -12,7 +12,12 @@ body
 {
     background-color: white;
     margin: 0;
+    overflow-y: scroll;
     overflow-x: hidden;
+}
+::-webkit-scrollbar 
+{
+    width: 0px;
 }
 a
 {
@@ -32,20 +37,32 @@ a
     flex-shrink: 1;
     flex-basis: auto;
 }
-#preto
+.black_
 {
     position: absolute;
     z-index: 4;
-    width: 100%;
-    height: 100%;
     margin: 0;
     display: none;
     justify-content: center;
     align-items: center;
+    width: 100vw;
+    height: 100vh;
+    min-height: 100vh;
+    max-height: 100vh;
     flex-direction: column;
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: auto;
+    animation: wha 0.3s forwards;
+}
+@keyframes wha
+{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .something
 {
@@ -58,14 +75,17 @@ a
 @keyframes buu
 {
     0%{
-      opacity: 0;
+        opacity: 0;
     }
-    50%{
-      opacity: 0.3;
+    20%{
+        opacity: 0;
+    }
+    60%{
+        opacity: 0.3;
     }
     100%{
-      display: none;
-      opacity: 0;
+        display: none;
+        opacity: 0;
     }
 }
 .logo
@@ -112,13 +132,13 @@ a
 }
 .mao
 {
-    width: 32px;
+    width: 30px;
     position: relative;
     float: left;
     z-index: 2;
     margin: 0;
     margin-top: -8px;
-    animation: backForth 1s infinite;
+    animation: backForth 0.8s linear infinite;
 }
 @keyframes backForth 
 {
@@ -126,7 +146,7 @@ a
       transform: translateX(0);
     }
     50% {
-        transform: translateX(-4px);
+        transform: translateX(-3px);
     }
     100% {
       transform: translateX(0px);
@@ -136,16 +156,16 @@ a
 {
     position: relative;
     float: left;
+    margin-right: -10px;
     color: rgb(255, 255, 255);
     font-family: 'font1';
-    font-size: 20px;
+    font-size: 1.2rem;
     text-align: center;
     align-content: center;
     background-color: #06000f;
-    padding: 7px;
+    padding: 5px;
     border: 1px solid #06000f;
-    width: 80px;
-    margin-right: -7px;
+    width: 70px;
     cursor: url(img/cursor.png), auto;
 }
 .about:before 
@@ -163,16 +183,16 @@ a
 {
     position: relative;
     float: left;
-    margin-right: 25px;
+    margin-right: 20px;
     color: rgb(255, 255, 255);
     font-family: 'font1';
-    font-size: 20px;
+    font-size: 1.2rem;
     text-align: center;
     align-content: center;
     background-color: #06000f;
-    padding: 7px;
+    padding: 5px;
     border: 1px solid #06000f;
-    width: 80px;
+    width: 70px;
     cursor: url(img/cursor.png), auto;
     animation: upToDown 1s forwards;
 }
@@ -200,16 +220,16 @@ a
 {
     position: relative;
     float: left;
-    margin-right: 25px;
+    margin-right: 20px;
     color: rgb(255, 255, 255);
     font-family: 'font1';
-    font-size: 20px;
+    font-size: 1.2rem;
     text-align: center;
     align-content: center;
     background-color: #06000f;
-    padding: 7px;
+    padding: 5px;
     border: 1px solid #06000f;
-    width: 80px;
+    width: 70px;
     cursor: url(img/cursor.png), auto;
 }
 .story:before 
@@ -229,13 +249,13 @@ a
     float: left;
     color: rgb(255, 255, 255);
     font-family: 'font1';
-    font-size: 20px;
+    font-size: 1.2rem;
     text-align: center;
     align-content: center;
     background-color: #06000f;
-    padding: 7px;
+    padding: 5px;
     border: 1px solid #06000f;
-    width: 80px;
+    width: 70px;
     cursor: url(img/cursor.png), auto;
 }
 .team:before 
@@ -266,6 +286,16 @@ a
     flex-basis: auto;
     flex-direction: column;
     position: relative;
+    animation: uwu 1s forwards;
+}
+@keyframes uwu
+{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .bct:after 
 {
@@ -473,9 +503,12 @@ a
 }
 @media screen and (max-width: 64rem)
 {
-    .conteiner-geral
+    @media screen and (max-height: 44rem)
     {
-        height: 100% !important;
+        .bct
+        {
+            max-height: 250px;
+        }
     }
     .k7
     {
