--- a/css/1.css
+++ b/css/1.css
@@ -282,7 +282,7 @@ a
     display: flex;
     position: relative;
     justify-content: center;
-    margin-bottom: -15px;
+    margin-bottom: -1rem;
 }
 .here
 {
@@ -557,7 +557,7 @@ a
 }
 @media screen and (max-width: 64rem)
 {
-    @media screen and (max-height: 45rem)
+    @media screen and (max-height: 47.5rem)
     {
         .door
         {
